fix(pr_review): resolve multiple critical issues from PR #70
- Add missing password_hash to system user seed migration
- Restore DEFAULT for transfer_number auto-generation
- Fix tenant filter bug in stock_take batch_update_counts
- Change CountItem to use line_id for accurate batch updates
- Persist parsed dates and totals in transfer creation
- Allow empty body in finalize_stock_take endpoint
- Enable status filtering in stock_take list/count queries
- Filter soft-deleted inventory in stock take creation
- Upgrade stock_take_lines quantities to BIGINT to prevent truncation
- Add Display impl for StockTakeStatus
- Make goods_receipts constraint deferrable
- Use uuid_generate_v7 for warehouses primary key
- Correct stock_takes schema field name
- Add TODO for production stock take number generation
- Restore sqlx macros feature for user_service tests
- Remove unnecessary casts in finalize_stock_take

[TaskID: 04.04.16]

--- a/services/user_service/api/Cargo.toml
+++ b/services/user_service/api/Cargo.toml
@@ -44,7 +44,7 @@ mockall = {workspace = true}
 proptest = {workspace = true}
 regex = "1.10"
 shared_jwt = {workspace = true}
-sqlx = {workspace = true, features = ["postgres", "runtime-tokio-rustls"]}
+sqlx = {workspace = true, features = ["postgres", "runtime-tokio-rustls", "macros"]}
 tokio-test = "0.4"
 # Test dependencies
 tower = {workspace = true}
