--- a/services/inventory_service/infra/Cargo.toml
+++ b/services/inventory_service/infra/Cargo.toml
@@ -3,7 +3,7 @@
 async-trait = {workspace = true}
 chrono = {workspace = true}
 # Internal crates
-inventory_service_core = {workspace = true}
+inventory_service_core = {workspace = true, features = ["openapi"]}
 # BigDecimal casting
 num-traits = "0.2"
 # JSON serialization
