--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,7 @@ mockall = "0.13"
 once_cell = "1.19"
 proptest = "1.4"
 regex = "1.10"
+rust_decimal = "1.0"
 # Serde - serialization
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
