fix: address PR #71 review issues [TaskID: 04.04.19]
- Standardize monetary types: rust_decimal::Decimal in domain, f64 in DTOs, BIGINT cents in DB
- Update migration: soft delete, unique constraint, advisory lock for numbers, incremental summary trigger, fixed variance trigger
- Ensure compilation and resolve all critical/warning issues from reviewers

--- a/services/inventory_service/api/Cargo.toml
+++ b/services/inventory_service/api/Cargo.toml
@@ -13,7 +13,7 @@ chrono = {workspace = true}
 # Futures
 futures = {workspace = true}
 # Internal crates
-inventory_service_core = {workspace = true, features = ["openapi"]}
+inventory_service_core = {workspace = true}
 inventory_service_infra = {workspace = true}
 # Serialization
 serde = {workspace = true}
