fix: add openapi feature and conditional derives for reconciliation DTOs
- Add openapi feature to core Cargo.toml for conditional ToSchema derives
- Make ToSchema and IntoParams derives conditional on openapi feature in reconciliation DTOs

--- a/services/inventory_service/core/Cargo.toml
+++ b/services/inventory_service/core/Cargo.toml
@@ -13,11 +13,15 @@ shared_error = {workspace = true}
 # Database
 sqlx = {workspace = true}
 # OpenAPI documentation
-utoipa = {workspace = true}
+utoipa = {workspace = true, optional = true}
 # UUID
 uuid = {workspace = true}
 # Validation
 validator = {workspace = true}
+
+[features]
+default = []
+openapi = ["utoipa"]
 
 [lib]
 name = "inventory_service_core"
