fix(pr_review): resolve compilation and review issues for stock reconciliation
- Make utoipa ToSchema derives conditional on 'openapi' feature in core DTOs
- Switch monetary types from rust_decimal to f64 for ToSchema compatibility
- Implement cents ↔ f64 conversion helpers in infra layer
- Fix Option handling for nullable DB columns in reconciliation repository
- Remove non-existent updated_by column from UPDATE queries
- Enable openapi feature for core in API crate
- Fix migration column reference bug (id → warehouse_id)
- Generate sqlx offline metadata for compile-time validation

Resolves: conditional compilation issues, ToSchema trait bounds, type mismatches, sqlx validation errors

TaskID: 04.04.19

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 # Integration Testing Environment
 # Isolated test environment with dedicated PostgreSQL, Redis, and NATS instances
@@ -13,7 +13,7 @@ services:
       POSTGRES_PASSWORD: anthill
       POSTGRES_DB: anthill_test
     ports:
-      - "5433:5432" # Use different port to avoid conflicts with dev DB
+      - "5434:5432" # Use different port to avoid conflicts with dev DB
     volumes:
       - postgres_test_data:/var/lib/postgresql/data
       # Mount migrations for easy testing
@@ -49,7 +49,11 @@ services:
       - "4223:4222" # Use different port to avoid conflicts
       - "8223:8222" # HTTP monitoring port
     healthcheck:
-      test: ["CMD-SHELL", "wget --spider -q http://localhost:8222/healthz || exit 1"]
+      test:
+        [
+          "CMD-SHELL",
+          "wget --spider -q http://localhost:8222/healthz || exit 1",
+        ]
       interval: 5s
       timeout: 3s
       retries: 5
