--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,7 +64,7 @@ shared_jwt = {path = "shared/jwt"}
 shared_kanidm_client = {path = "shared/kanidm_client"}
 shared_types = {path = "shared/types"}
 # SQLx - database
-sqlx = {version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json", "uuid", "chrono"]}
+sqlx = {version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json", "uuid", "chrono", "offline"]}
 thiserror = "1.0"
 # Tokio - async runtime
 tokio = {version = "1", features = ["full"]}
