fix(pr_review): resolve critical compilation issues and review comments [TaskID: 04.04.19]
- Uncomment delivery_service field in AppState
- Change DummyDeliveryService to return ServiceUnavailable
- Add missing ScanBarcodeRequest/ScanBarcodeResponse imports
- Replace hardcoded credentials with placeholders in .env.test
- Complete service constructors in test helpers with proper repositories
- Fix Casbin model with valid permissive configuration
- Use Uuid::now_v7() for test IDs
- Add soft-delete filter to delivery_order list query
- Remove backup files with compilation issues
- Standardize InfraTx usage
- Remove unused imports from tests

--- a/.env.test
+++ b/.env.test
@@ -1,5 +1,5 @@
 # Test Database Configuration
-DATABASE_URL=postgres://anthill:anthill@localhost:5434/anthill_test
+DATABASE_URL=postgres://${TEST_DB_USER}:${TEST_DB_PASSWORD}@localhost:5434/anthill_test
 RUST_LOG=debug
 REDIS_URL=redis://localhost:6380
 NATS_URL=nats://localhost:4223
