--- a/services/inventory_service/api/Cargo.toml
+++ b/services/inventory_service/api/Cargo.toml
@@ -10,6 +10,8 @@ async-trait = {workspace = true}
 # Axum & web
 axum = {workspace = true}
 chrono = {workspace = true}
+hyper = {version = "1.0", features = ["full"]}
+hyper-util = {version = "0.1", features = ["full"]}
 # Futures
 futures = {workspace = true}
 # Internal crates
