fix(pr_review): resolve critical issues in putaway rules implementation
- Fix foreign key in putaway_rules_category_fk to include tenant_id for multi-tenancy
- Add update_updated_at_column function to migrations to avoid trigger errors
- Add product_id to ConfirmPutawayRequest to fix random UUID bug in stock moves
- Update StockMoveRepository create to return StockMove for getting move_id
- Fix stock move repo call in confirm_putaway to use correct parameters
- Use checked_add for total_quantity to prevent overflow
- Add rows_affected check in update_location_stock
- Implement proper regex matching in matches_pattern
- Replace unwrap with proper error handling in confirm_putaway
- Fix sub-task numbers in task log

[TaskID: 04.10.01]

--- a/services/inventory_service/infra/Cargo.toml
+++ b/services/inventory_service/infra/Cargo.toml
@@ -25,6 +25,8 @@ tracing = "0.1"
 uuid = {workspace = true}
 # Validation
 validator = {workspace = true}
+# Regex matching
+regex = {workspace = true}
 
 [dev-dependencies]
 # Test dependencies
