feat(inventory): implement putaway rules system with rule engine, API, and multi-tenancy
- Add putaway_rules and storage_locations tables with proper constraints
- Implement putaway rule engine supporting product, category, attribute, FIFO/FEFO rules
- Create putaway suggestion and confirmation APIs
- Add capacity validation and stock updates
- Fix qc_point_type enum mapping in quality repository
- Update task tracking and documentation

TaskID: 04.10.01

--- a/services/inventory_service/infra/Cargo.toml
+++ b/services/inventory_service/infra/Cargo.toml
@@ -17,6 +17,7 @@ sha2 = "0.10"
 # Shared crates
 shared_db = {workspace = true}
 shared_error = {workspace = true}
+shared_events = {workspace = true}
 # Slug generation
 slug = "0.1"
 # Database
