--- a/shared/error/Cargo.toml
+++ b/shared/error/Cargo.toml
@@ -6,6 +6,7 @@ serde_json = {workspace = true}
 sqlx = {workspace = true}
 thiserror = {workspace = true}
 tracing = {workspace = true}
+validator = {workspace = true}
 
 [package]
 name = "shared_error"
