feat(inventory): implement idempotency and concurrency control
- Add idempotency middleware with Redis-based duplicate request prevention
- Implement distributed locking service for stock mutations
- Update database queries to use SELECT FOR UPDATE for race condition prevention
- Integrate distributed locking into receipt service
- Add comprehensive error handling and testing

[TaskID: 04.11.01]

--- a/services/inventory_service/api/Cargo.toml
+++ b/services/inventory_service/api/Cargo.toml
@@ -17,6 +17,8 @@ hyper-util = {version = "0.1.17", features = ["full"]}
 # Internal crates
 inventory_service_core = {workspace = true, features = ["openapi"]}
 inventory_service_infra = {workspace = true}
+# Redis for caching and distributed locking
+redis = {version = "0.27", features = ["tokio-comp", "connection-manager"]}
 # Serialization
 serde = {workspace = true}
 serde_json = {workspace = true}
