fix(pr_review): resolve critical issues in idempotency and concurrency implementation
- Fix race condition in upsert_inventory_level by using INSERT ... ON CONFLICT DO UPDATE
- Delegate update_available_quantity to transactional helper for consistency
- Fix lock deduplication and sorting in receipt service to prevent deadlocks
- Fix type mismatch in idempotency middleware TTL casting
- Consolidate redis dependency to workspace Cargo.toml
- Fix grammar in task log

[TaskID: 04.11.01]

--- a/services/inventory_service/api/Cargo.toml
+++ b/services/inventory_service/api/Cargo.toml
@@ -18,7 +18,7 @@ hyper-util = {version = "0.1.17", features = ["full"]}
 inventory_service_core = {workspace = true, features = ["openapi"]}
 inventory_service_infra = {workspace = true}
 # Redis for caching and distributed locking
-redis = {version = "0.27", features = ["tokio-comp", "connection-manager"]}
+redis = {workspace = true}
 # Serialization
 serde = {workspace = true}
 serde_json = {workspace = true}
