--- a/services/inventory_service/infra/Cargo.toml
+++ b/services/inventory_service/infra/Cargo.toml
@@ -7,7 +7,7 @@ inventory_service_core = {workspace = true}
 # BigDecimal casting
 num-traits = "0.2"
 # Redis for distributed locking
-redis = {version = "0.27", features = ["tokio-comp", "connection-manager"]}
+redis = {workspace = true}
 # Regex matching
 regex = {workspace = true}
 # Decimal numbers
