--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,8 @@ mockall = "0.13"
 # Once cell for global state
 once_cell = "1.19"
 proptest = "1.4"
+# Redis for distributed locking and idempotency
+redis = {version = "0.27", features = ["tokio-comp", "connection-manager"]}
 regex = "1.10"
 rust_decimal = {version = "1.0", features = ["serde"]}
 # Serde - serialization
