feat: implement performance optimizations for inventory service
- Add daily_stock_snapshots table with populate function for historical reports
- Implement advanced indexing with partial and composite indexes
- Add Redis-based caching layer for products and inventory levels
- Update task status to NeedsReview

TaskID: V1_MVP/04_Inventory_Service/4.11_Technical_Implementation/task_04.11.03_implement_performance_optimizations

--- a/services/inventory_service/infra/Cargo.toml
+++ b/services/inventory_service/infra/Cargo.toml
@@ -12,6 +12,8 @@ redis = {workspace = true}
 regex = {workspace = true}
 # Decimal numbers
 rust_decimal = {workspace = true}
+# Serialization
+serde = {workspace = true}
 # JSON serialization
 serde_json = {workspace = true}
 # Hashing for idempotency keys
