fix(pr_review): implement Redis connection pooling for cache performance
- Add bb8 and bb8-redis dependencies for connection pooling
- Update RedisCache to use pooled connections instead of creating new ones per operation
- Change RedisCache::new to async to support pool initialization
- Update task file to mark Redis pooling issue as completed

TaskID: V1_MVP/04_Inventory_Service/4.11_Technical_Implementation/task_04.11.03_implement_performance_optimizations

--- a/services/inventory_service/infra/Cargo.toml
+++ b/services/inventory_service/infra/Cargo.toml
@@ -8,6 +8,9 @@ inventory_service_core = {workspace = true}
 num-traits = "0.2"
 # Redis for distributed locking
 redis = {workspace = true}
+# Redis connection pooling
+bb8 = "0.8"
+bb8-redis = "0.15"
 # Regex matching
 regex = {workspace = true}
 # Decimal numbers
