fix(ci): correct service path names in codecov and workflow configs
- codecov.yml: Change service paths from hyphen to underscore format
  - services/user-service/ -> services/user_service/
  - services/inventory-service/ -> services/inventory_service/
  - services/order-service/ -> services/order_service/
  - services/payment-service/ -> services/payment_service/
  - services/integration-service/ -> services/integration_service/

- test-coverage.yml: Fix inventory service paths
  - workspaces: services/inventory-service -> services/inventory_service
  - cd services/inventory-service -> cd services/inventory_service

Fixes path inconsistencies that prevented coverage jobs from running correctly.

--- a/codecov.yml
+++ b/codecov.yml
@@ -48,27 +48,27 @@ flags:
 
   user-service:
     paths:
-      - services/user-service/
+      - services/user_service/
     carryforward: true
 
   inventory-service:
     paths:
-      - services/inventory-service/
+      - services/inventory_service/
     carryforward: true
 
   order-service:
     paths:
-      - services/order-service/
+      - services/order_service/
     carryforward: true
 
   payment-service:
     paths:
-      - services/payment-service/
+      - services/payment_service/
     carryforward: true
 
   integration-service:
     paths:
-      - services/integration-service/
+      - services/integration_service/
     carryforward: true
 
   frontend:
