fix(ci): address PR review feedback - rename flags and fix documentation
Addresses feedback from:
- Greptile: Update CODECOV_SETUP.md line 101 path
- Gemini Code Assist: Rename flags to use underscores for consistency
- Sourcery AI: Improve consistency across configuration

Changes:
- codecov.yml: Rename flags from hyphen to underscore format
  - user-service -> user_service
  - inventory-service -> inventory_service
  - order-service -> order_service
  - payment-service -> payment_service
  - integration-service -> integration_service

- test-coverage.yml: Update flag references to match
  - flags: user-service -> user_service
  - flags: inventory-service -> inventory_service

- CODECOV_SETUP.md: Fix example path
  - cd services/user-service -> cd services/user_service

--- a/codecov.yml
+++ b/codecov.yml
@@ -46,27 +46,27 @@ flags:
       - shared/
     carryforward: true
 
-  user-service:
+  user_service:
     paths:
       - services/user_service/
     carryforward: true
 
-  inventory-service:
+  inventory_service:
     paths:
       - services/inventory_service/
     carryforward: true
 
-  order-service:
+  order_service:
     paths:
       - services/order_service/
     carryforward: true
 
-  payment-service:
+  payment_service:
     paths:
       - services/payment_service/
     carryforward: true
 
-  integration-service:
+  integration_service:
     paths:
       - services/integration_service/
     carryforward: true
