--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -151,7 +151,7 @@ jobs:
         with:
           use_oidc: true
           files: ./lcov-user.info
-          flags: user-service
+          flags: user_service
           name: user-service-coverage
           fail_ci_if_error: false
 
@@ -187,7 +187,7 @@ jobs:
         with:
           use_oidc: true
           files: ./lcov-inventory.info
-          flags: inventory-service
+          flags: inventory_service
           name: inventory-service-coverage
           fail_ci_if_error: false
 
