ci(codecov): fix backend coverage visibility
- Remove path filters for push to main branches (always run coverage)
- Add CODECOV_TOKEN fallback for all codecov-action calls
- Add continue-on-error to service coverage jobs
- Add ci-all-tests flag to codecov.yml
- Add component management for better grouping (rust-backend, frontend)
- Use OIDC with token fallback in ci-testing.yml

Fixes issue where only frontend coverage was visible on Codecov dashboard.

--- a/.github/workflows/ci-testing.yml
+++ b/.github/workflows/ci-testing.yml
@@ -391,9 +391,10 @@ jobs:
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
         with:
+          use_oidc: true
           token: ${{ secrets.CODECOV_TOKEN }}
           files: ./lcov.info
-          flags: all-tests
+          flags: ci-all-tests
           name: comprehensive-coverage
           fail_ci_if_error: false
           verbose: true
