--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -3,16 +3,7 @@ name: Test Coverage
 on:
   push:
     branches: [master, main, develop]
-    paths:
-      - "services/**/*.rs"
-      - "services/**/Cargo.toml"
-      - "shared/**/*.rs"
-      - "shared/**/Cargo.toml"
-      - "frontend/**/*.{js,ts,svelte}"
-      - "frontend/package.json"
-      - "frontend/vite.config.ts"
-      - "frontend/playwright.config.ts"
-      - ".github/workflows/test-coverage.yml"
+    # No path filter for main branches - always run coverage
   pull_request:
     branches: [main]
     paths:
@@ -104,6 +95,7 @@ jobs:
   coverage-user-service:
     name: Coverage - User Service
     runs-on: ubuntu-latest
+    continue-on-error: true
 
     steps:
       - uses: actions/checkout@v4
@@ -158,6 +150,7 @@ jobs:
   coverage-inventory-service:
     name: Coverage - Inventory Service
     runs-on: ubuntu-latest
+    continue-on-error: true
 
     steps:
       - uses: actions/checkout@v4
@@ -194,6 +187,7 @@ jobs:
   coverage-frontend:
     name: Coverage - Frontend
     runs-on: ubuntu-latest
+    continue-on-error: true
 
     steps:
       - uses: actions/checkout@v4
@@ -230,6 +224,7 @@ jobs:
           files: ./frontend/coverage/lcov.info
           flags: frontend
           name: frontend-coverage
+          fail_ci_if_error: false
           fail_ci_if_error: false
 
   # Summary job
