feat(inventory): implement performance tests with Criterion and k6
- Add Criterion benchmarks for inventory_service_core:
  - UUID generation (v4, v7, batch)
  - Category path parsing and tree building
  - Collection and valuation operations

- Add k6 load testing scripts:
  - product_search.js (500 req/s target)
  - stock_moves.js (100 req/s target)
  - mixed_workload.js (70/30 read/write)

- Update BENCHMARKING.md with inventory service section
- Mark task 04.13.05 as Done

Closes #04.13.05

--- a/services/inventory_service/core/Cargo.toml
+++ b/services/inventory_service/core/Cargo.toml
@@ -1,3 +1,7 @@
+[[bench]]
+harness = false
+name = "inventory_benchmarks"
+
 [dependencies]
 # Async traits
 async-trait = {workspace = true}
@@ -18,6 +22,11 @@ utoipa = {workspace = true, optional = true}
 uuid = {workspace = true}
 # Validation
 validator = {workspace = true}
+
+[dev-dependencies]
+criterion = {workspace = true}
+fake = {workspace = true}
+tokio = {workspace = true}
 
 [features]
 default = []
