fix(ci): move database env vars from permissions to env block
The POSTGRES_USER, POSTGRES_PASSWORD, POSTGRES_DB, and DATABASE_URL
variables were incorrectly placed under the 'permissions' key instead
of the 'env' key. This caused GitHub Actions to reject the workflow
file with 'Unexpected value' errors.

Fixes: Invalid workflow file at lines 30-33

--- a/.github/workflows/ci-testing.yml
+++ b/.github/workflows/ci-testing.yml
@@ -18,14 +18,15 @@ on:
       - "shared/**/Cargo.toml"
       - "migrations/**/*.sql"
 
+permissions:
+  contents: read
+  id-token: write
+  pull-requests: write
+
 env:
   CARGO_TERM_COLOR: always
   RUST_BACKTRACE: 1
   RUSTFLAGS: "--cfg uuid_unstable"
-
-permissions:
-  contents: read
-  id-token: write
   # Test database configuration
   POSTGRES_USER: postgres
   POSTGRES_PASSWORD: postgres
