fix: resolve clippy warnings in inventory_service crates
- Fix redundant closures in inventory_benchmarks.rs (Uuid::new_v4, Uuid::now_v7)
- Add #[allow(dead_code)] to unused BenchCategory.level field
- Replace bool_assert_comparison in removal_strategy.rs tests
- Add shared_jwt dev-dependency for concurrent_stock_tests
- Add #[allow(dead_code, unused_imports)] in test helpers
- Remove unavailable create_test_app import from reconciliation tests

--- a/services/inventory_service/api/Cargo.toml
+++ b/services/inventory_service/api/Cargo.toml
@@ -52,6 +52,7 @@ fake = {workspace = true}
 http-body-util = "0.1"
 mockall = {workspace = true}
 proptest = {workspace = true}
+shared_jwt = {workspace = true}
 tokio-test = "0.4"
 wiremock = {workspace = true}
 
